# nomore-coach-potato

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  schema.sql
app/: auth.py  db.py  main.py  parsers.py
app/handlers/: common.py  movies.py  plans.py
