[project]
name = "nomore-coach-potato"
version = "0.1.0"
description = "Telegram bot for a couple's event planning and movie watchlist"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[webhooks]==21.6",
    "asyncpg==0.29.0",
    "aiohttp==3.10.10",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "tzdata==2024.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
